wasm_parser/src/snapshots/wasm_parser__tests__return_i64.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type(
            TypeSection {
                entries: [
                    FunctionSignature {
                        param_types: [
                            I32,
                        ],
                        return_types: [],
                    },
                ],
            },
        ),
        Function(
            FunctionSection {
                types: [
                    0,
                ],
            },
        ),
        Memory(
            MemorySection {
                entries: [
                    MemoryType {
                        limits: Zero(
                            17,
                        ),
                    },
                ],
            },
        ),
        Export(
            ExportSection {
                entries: [
                    ExportEntry {
                        name: "memory",
                        kind: Memory {
                            ty: 0,
                        },
                    },
                    ExportEntry {
                        name: "is_greater",
                        kind: Function {
                            ty: 0,
                        },
                    },
                ],
            },
        ),
        Code(
            CodeSection {
                entries: [
                    FunctionBody {
                        locals: [],
                        code: [
                            InstructionWrapper {
                                instruction_id: 1,
                                instruction: OP_LOCAL_GET(
                                    0,
                                ),
                            },
                            InstructionWrapper {
                                instruction_id: 2,
                                instruction: OP_I64_CONST(
                                    -1000,
                                ),
                            },
                            InstructionWrapper {
                                instruction_id: 3,
                                instruction: OP_I64_STORE(
                                    MemArg {
                                        align: 2,
                                        offset: 0,
                                    },
                                ),
                            },
                        ],
                    },
                ],
            },
        ),
        Custom(
            CustomSection {
                name: "producers",
            },
        ),
    ],
}
