wasm_parser/src/snapshots/wasm_parser__tests__unreachable.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type(
            TypeSection {
                entries: [
                    FunctionSignature {
                        param_types: [
                            I32,
                        ],
                        return_types: [
                            I32,
                        ],
                    },
                ],
            },
        ),
        Function(
            FunctionSection {
                types: [
                    0,
                ],
            },
        ),
        Memory(
            MemorySection {
                entries: [
                    MemoryType {
                        limits: Zero(
                            17,
                        ),
                    },
                ],
            },
        ),
        Export(
            ExportSection {
                entries: [
                    ExportEntry {
                        name: "memory",
                        kind: Memory {
                            ty: 0,
                        },
                    },
                    ExportEntry {
                        name: "my_loop",
                        kind: Function {
                            ty: 0,
                        },
                    },
                ],
            },
        ),
        Code(
            CodeSection {
                entries: [
                    FunctionBody {
                        locals: [],
                        code: [
                            Ctrl(
                                OP_UNREACHABLE,
                            ),
                        ],
                    },
                ],
            },
        ),
        Custom(
            CustomSection {
                name: "producers",
            },
        ),
    ],
}
